--- a/squid-config/squid.conf
+++ b/squid-config/squid.conf
@@ -1,15 +1,31 @@
+# =========================================
+#  FILE: /etc/squid/squid.conf
+#  FULL CONFIG
+#  by Oat 
+# =========================================
+
 # ----------------------------
-# ACL
+# 1) ACL (Access Control Lists)
 # ----------------------------
+# localnet: กลุ่มเครื่องใน LAN ที่อนุญาตให้ใช้งาน Proxy
 acl localnet src 192.168.1.0/24
 acl localnet src 192.168.65.0/24
 
+# limited_users: กลุ่ม IP ที่ต้องการจำกัดความเร็ว (Delay Pools)
 acl limited_users src 192.168.1.0/24
 acl limited_users src 192.168.65.0/24
 
+# manager: ป้องกันการเข้าถึง url ประเภท cache_object
+acl manager proto cache_object
+
+# เช็คเมธอด CONNECT และพอร์ตต่าง ๆ สำหรับ SSL หรือ Safe
+acl CONNECT method CONNECT
+
+# กำหนด SSL_ports
 acl SSL_ports port 443
 acl SSL_ports port 563
 
+# กำหนด Safe_ports
 acl Safe_ports port 80
 acl Safe_ports port 21
 acl Safe_ports port 443
@@ -21,34 +37,109 @@ acl Safe_ports port 488
 acl Safe_ports port 591
 acl Safe_ports port 777
 
-acl CONNECT method CONNECT
-
 # ----------------------------
-# พอร์ต & Hostname
+# 2) พอร์ต & Hostname
 # ----------------------------
 http_port 3128
 visible_hostname squid-proxy
 
 # ----------------------------
-# การเข้าถึง
+# 3) Authentication (ถ้าต้องการบังคับให้ใส่รหัสผ่านก่อนใช้งาน Proxy)
+#    - ต้องติดตั้ง package "apache2-utils" หรือ "htpasswd" แล้วสร้าง /etc/squid/users
 # ----------------------------
+# auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/users
+# auth_param basic realm "Squid Proxy Auth"
+# acl authenticated proxy_auth REQUIRED
+# http_access allow authenticated
+# (หมายเหตุ: ถ้าเปิดใช้งานส่วนนี้ ให้ย้าย "http_access allow localnet" ลงล่าง หรือแก้ logic ACL ตามต้องการ)
+
+# ----------------------------
+# 4) การควบคุม http_access
+# ----------------------------
+
+# 4.1 ปฏิเสธการเข้าถึง manager (cache_object)
+http_access deny manager all
+
+# 4.2 ปฏิเสธพอร์ตไม่ปลอดภัย
 http_access deny !Safe_ports
+
+# 4.3 ปฏิเสธ CONNECT ถ้าไม่ใช่ SSL_ports
 http_access deny CONNECT !SSL_ports
 
+# 4.4 ตัวอย่าง จำกัด Concurrent Connection (ป้องกัน flood)
+acl too_many_conns maxconn 20
+http_access deny too_many_conns
+
+# 4.5 อนุญาตกลุ่ม localnet
 http_access allow localnet
+
+# 4.6 สุดท้าย ถ้าไม่ match ข้างบน => ปฏิเสธ
 http_access deny all
 
+
 # ----------------------------
-# Delay Pools
+# 5) Delay Pools (จำกัดแบนด์วิดท์)
+# ----------------------------
+# ตย. การกำหนด 1 pool:
+#  - delay_class 1 2  => hierarchical class 2 (ระดับ network + user)
+#  - delay_parameters 1 X/Y Z/W
+#     X/Y = aggregate limit (กลุ่ม)
+#     Z/W = individual limit (ราย IP)
+#  - unit = Byte/second
 # ----------------------------
 delay_pools 1
 delay_class 1 2
+
+# ให้ apply delay pool กับ limited_users เท่านั้น
 delay_access 1 allow limited_users
 delay_access 1 deny all
+
+# เช่น ต้องการให้กลุ่ม limited_users ทั้งหมดรวมกันไม่เกิน 64 KB/s
+#   และแต่ละ IP ไม่เกิน 8 KB/s
 delay_parameters 1 64000/64000 8000/8000
 
+
 # ----------------------------
-# ปิดเผย header proxy
+# 6) Cache & Logging
+# ----------------------------
+
+# 6.1 การตั้งค่า log
+access_log /var/log/squid/access.log squid
+cache_log /var/log/squid/cache.log
+# store_log ไม่ค่อยได้ใช้ แต่ถ้าอยากเก็บการเขียน cache
+# store_log /var/log/squid/store.log
+
+# 6.2 การกำหนด disk cache (ถ้าต้องการใช้ caching)
+cache_dir ufs /var/spool/squid 100 16 256
+#   100  => ขนาด cache บน disk 100 MB
+#   16   => number of 1st-level subdirectories
+#   256  => number of 2nd-level subdirectories
+
+# 6.3 การกำหนด cache_mem (ใช้ RAM เท่าไหร่)
+cache_mem 64 MB
+
+# 6.4 refresh_pattern คุม behavior cache
+refresh_pattern ^ftp:         1440    20%    10080
+refresh_pattern ^gopher:      1440    20%    10080
+refresh_pattern -i \.(gif|png|jpg|jpeg|ico)$  10080 90% 43200
+refresh_pattern -i \.(rpm|deb|exe|zip|tar|tgz)$ 10080 90% 43200
+refresh_pattern .             0       20%    4320
+
+# ----------------------------
+# 7) ขนาด Request/Response
+#    ช่วยป้องกันการใช้งานเกินขนาด (เช่นอัพโหลดไฟล์ใหญ่)
+# ----------------------------
+request_body_max_size 50 MB
+reply_body_max_size 200 MB
+
+# ----------------------------
+# 8) DNS (ถ้าต้องการกำหนดเอง ไม่ใช้ของระบบ)
+# ----------------------------
+dns_nameservers 8.8.8.8 1.1.1.1
+# dns_v4_first on
+
+# ----------------------------
+# 9) ซ่อน Headers เพื่อไม่เปิดเผยว่าเป็น Proxy
 # ----------------------------
 via off
 forwarded_for delete
@@ -56,3 +147,9 @@ request_header_access Via deny all
 request_header_access X-Forwarded-For deny all
 request_header_access Proxy-Connection deny all
 request_header_access Cache-Control deny all
+
+# ----------------------------
+# 10) Debug Level (ถ้าต้องการ)
+#     1 = น้อย, 9 = ละเอียดยิบ
+# ----------------------------
+# debug_options ALL,1
