--- a/webmin-docker/squid-config/config
+++ b/webmin-docker/squid-config/config
@@ -1,6 +1,21 @@
-squid_path=/etc/squid/squid.conf
-apply_cmd=squid -k reconfigure
-start_cmd=service squid start
-stop_cmd=service squid stop
-pid_file=/run/squid.pid
-status_cmd=ps aux | grep [s]quid
+cache_dir=/var/spool/squid
+cal_args=-aw
+cal_all=1
+squid_start=service squid start
+crypt_conf=0
+squid_stop=service squid stop
+squid_restart=service squid reload 
+sync_modify=1
+log_dir=/var/log/squid
+sort_conf=0
+sync_create=0
+sync_delete=0
+squidclient=squidclient
+squid_conf=/etc/squid/squid.conf
+cal_max=50000
+cal_fmt=w
+calamaris=calamaris
+pid_file=/var/run/squid.pid
+squid_path=squid
+restart_pos=0
+cachemgr_path=/usr/lib/cgi-bin/cachemgr.cgi
