--- a/webmin-docker/supervisord.conf
+++ b/webmin-docker/supervisord.conf
@@ -13,8 +13,9 @@ stdout_logfile=/var/log/squid-super.log
 stderr_logfile=/var/log/squid-super.err
 
 [program:webmin]
-command=/etc/init.d/webmin start && tail -F /var/webmin/miniserv.log
+command=/usr/share/webmin/miniserv.pl /etc/webmin/miniserv.conf
 autostart=true
-autorestart=false
+autorestart=true
+startretries=3
 stdout_logfile=/var/log/webmin-super.log
 stderr_logfile=/var/log/webmin-super.err
