--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,22 +16,23 @@ services:
   #   networks:
   #     - proxy-net
 
-  fail2ban:
-    image: crazymax/fail2ban:latest
-    container_name: fail2ban
-    privileged: true  # จำเป็นสำหรับ iptables access
-    # network_mode: "host"
-    networks:
-      - proxy-net
-    volumes:
-      # โฟลเดอร์ config ทั้งหมด
-      - ./fail2ban-config:/data
-      # ตรงนี้ read-only ให้ Fail2ban แค่ดู log
-      # แต่ถ้าอยากดู log อื่นด้วยก็อาจ mount เพิ่ม
-      - ./logs:/var/log/squid:ro
-      # ไม่ต้อง mount /etc/fail2ban ซ้ำ ถ้าโฮสต์ไม่มีไฟล์ fail2ban ติดตั้ง
-      # - /etc/fail2ban:/etc/fail2ban
-    restart: always
+  # fail2ban:
+  #   image: crazymax/fail2ban:latest
+  #   container_name: fail2ban
+  #   privileged: true  # จำเป็นสำหรับ iptables access
+  #   # network_mode: "host"
+  #   networks:
+  #     - proxy-net
+  #   volumes:
+  #     # โฟลเดอร์ config ทั้งหมด
+  #     - ./fail2ban-config:/data
+  #     # ตรงนี้ read-only ให้ Fail2ban แค่ดู log
+  #     # แต่ถ้าอยากดู log อื่นด้วยก็อาจ mount เพิ่ม
+  #     - ./logs:/var/log/squid:ro
+  #     - ./logs/webmin:/var/webmin:ro
+  #     # ไม่ต้อง mount /etc/fail2ban ซ้ำ ถ้าโฮสต์ไม่มีไฟล์ fail2ban ติดตั้ง
+  #     # - /etc/fail2ban:/etc/fail2ban
+  #   restart: always
 
     
   webmin:
@@ -42,8 +43,10 @@ services:
       - "10000:10000"
       - "3128:3128"
     volumes:
+      - ./logs/webmin:/var/webmin
       - ./logs:/var/log/squid
       - squid-cache:/var/spool/squid
+      - ./fail2ban-config/jail.local:/etc/fail2ban/jail.local:ro
       - ./squid-config/squid.conf:/etc/squid/squid.conf:rw
     restart: unless-stopped
     networks:
