Update configuration and logs for Webmin and Squid
- Updated timestamps in oscache and realos-cache logs to reflect recent changes.
- Modified webmin.log to include additional entries for fail2ban and squid operations.
- Enhanced squid.conf with improved comments and organization, including examples for access control and delay pools.
- Added squid-cgi and iptables to the Dockerfile for enhanced functionality.
- Created new log files for authentic-theme stats server to track WebSocket connections and activities.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,9 @@ services:
     ports:
       - "10000:10000"
       - "3128:3128"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     volumes:
       - ./logs/webmin:/var/webmin
       - ./logs:/var/log/squid
