--- a/squid-config/squid.conf
+++ b/squid-config/squid.conf
@@ -1,7 +1,7 @@
 # =========================================
 #  FILE: /etc/squid/squid.conf
-#  FULL CONFIG
-#  by Oat 
+#  FULL CONFIG (Example)
+#  By Oat
 # =========================================
 
 # ----------------------------
@@ -15,20 +15,20 @@ acl localnet src 192.168.65.0/24
 acl limited_users src 192.168.1.0/24
 acl limited_users src 192.168.65.0/24
 
-# manager: ป้องกันการเข้าถึง url ประเภท cache_object
+# manager: ป้องกันการเข้าถึง url ประเภท cache_object (Cache Manager)
 acl manager proto cache_object
 
-# เช็คเมธอด CONNECT และพอร์ตต่าง ๆ สำหรับ SSL หรือ Safe
+# เช็คเมธอด CONNECT และกำหนดพอร์ต
 acl CONNECT method CONNECT
 
-# กำหนด SSL_ports
+# SSL_ports
 acl SSL_ports port 443
 acl SSL_ports port 563
 
-# กำหนด Safe_ports
-acl Safe_ports port 80
-acl Safe_ports port 21
-acl Safe_ports port 443
+# Safe_ports
+acl Safe_ports port 80       # HTTP
+acl Safe_ports port 21       # FTP
+acl Safe_ports port 443      # HTTPS
 acl Safe_ports port 70
 acl Safe_ports port 210
 acl Safe_ports port 1025-65535
@@ -46,17 +46,17 @@ visible_hostname squid-proxy
 # ----------------------------
 # 3) Authentication (ถ้าต้องการบังคับให้ใส่รหัสผ่านก่อนใช้งาน Proxy)
 #    - ต้องติดตั้ง package "apache2-utils" หรือ "htpasswd" แล้วสร้าง /etc/squid/users
+#    - หากเปิดใช้งาน Basic Auth: ต้องแก้ http_access logic ให้เหมาะสม
 # ----------------------------
 # auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/users
 # auth_param basic realm "Squid Proxy Auth"
 # acl authenticated proxy_auth REQUIRED
 # http_access allow authenticated
-# (หมายเหตุ: ถ้าเปิดใช้งานส่วนนี้ ให้ย้าย "http_access allow localnet" ลงล่าง หรือแก้ logic ACL ตามต้องการ)
+# (หมายเหตุ: ถ้าเปิดใช้งานส่วนนี้ ให้ย้าย "http_access allow localnet" ลงล่าง หรือปรับ logic ACL ตามต้องการ)
 
 # ----------------------------
 # 4) การควบคุม http_access
 # ----------------------------
-
 # 4.1 ปฏิเสธการเข้าถึง manager (cache_object)
 http_access deny manager all
 
@@ -66,26 +66,18 @@ http_access deny !Safe_ports
 # 4.3 ปฏิเสธ CONNECT ถ้าไม่ใช่ SSL_ports
 http_access deny CONNECT !SSL_ports
 
-# 4.4 ตัวอย่าง จำกัด Concurrent Connection (ป้องกัน flood)
+# 4.4 จำกัดจำนวนการเชื่อมต่อสูงสุด (ตัวอย่าง maxconn 20 ต่อ IP)
 acl too_many_conns maxconn 20
 http_access deny too_many_conns
 
 # 4.5 อนุญาตกลุ่ม localnet
 http_access allow localnet
 
-# 4.6 สุดท้าย ถ้าไม่ match ข้างบน => ปฏิเสธ
+# 4.6 สุดท้าย ปฏิเสธทุกอย่างที่เหลือ
 http_access deny all
-
 
 # ----------------------------
 # 5) Delay Pools (จำกัดแบนด์วิดท์)
-# ----------------------------
-# ตย. การกำหนด 1 pool:
-#  - delay_class 1 2  => hierarchical class 2 (ระดับ network + user)
-#  - delay_parameters 1 X/Y Z/W
-#     X/Y = aggregate limit (กลุ่ม)
-#     Z/W = individual limit (ราย IP)
-#  - unit = Byte/second
 # ----------------------------
 delay_pools 1
 delay_class 1 2
@@ -94,31 +86,25 @@ delay_class 1 2
 delay_access 1 allow limited_users
 delay_access 1 deny all
 
-# เช่น ต้องการให้กลุ่ม limited_users ทั้งหมดรวมกันไม่เกิน 64 KB/s
-#   และแต่ละ IP ไม่เกิน 8 KB/s
+# ตัวอย่าง: จำกัดรวมกลุ่ม limited_users ไม่เกิน 64 KB/s และราย IP ไม่เกิน 8 KB/s
 delay_parameters 1 64000/64000 8000/8000
-
 
 # ----------------------------
 # 6) Cache & Logging
 # ----------------------------
-
-# 6.1 การตั้งค่า log
+# 6.1 Log
 access_log /var/log/squid/access.log squid
 cache_log /var/log/squid/cache.log
-# store_log ไม่ค่อยได้ใช้ แต่ถ้าอยากเก็บการเขียน cache
-# store_log /var/log/squid/store.log
+# store_log /var/log/squid/store.log  # ถ้าต้องการเก็บ store log
 
-# 6.2 การกำหนด disk cache (ถ้าต้องการใช้ caching)
+# 6.2 Disk cache
 cache_dir ufs /var/spool/squid 100 16 256
-#   100  => ขนาด cache บน disk 100 MB
-#   16   => number of 1st-level subdirectories
-#   256  => number of 2nd-level subdirectories
+#  (100 MB, 16 subdir-level1, 256 subdir-level2)
 
-# 6.3 การกำหนด cache_mem (ใช้ RAM เท่าไหร่)
+# 6.3 RAM cache
 cache_mem 64 MB
 
-# 6.4 refresh_pattern คุม behavior cache
+# 6.4 Refresh patterns
 refresh_pattern ^ftp:         1440    20%    10080
 refresh_pattern ^gopher:      1440    20%    10080
 refresh_pattern -i \.(gif|png|jpg|jpeg|ico)$  10080 90% 43200
@@ -127,10 +113,9 @@ refresh_pattern .             0       20%    4320
 
 # ----------------------------
 # 7) ขนาด Request/Response
-#    ช่วยป้องกันการใช้งานเกินขนาด (เช่นอัพโหลดไฟล์ใหญ่)
 # ----------------------------
 request_body_max_size 50 MB
-reply_body_max_size 200 MB
+reply_body_max_size   200 MB
 
 # ----------------------------
 # 8) DNS (ถ้าต้องการกำหนดเอง ไม่ใช้ของระบบ)
@@ -139,7 +124,7 @@ dns_nameservers 8.8.8.8 1.1.1.1
 # dns_v4_first on
 
 # ----------------------------
-# 9) ซ่อน Headers เพื่อไม่เปิดเผยว่าเป็น Proxy
+# 9) ซ่อน Headers
 # ----------------------------
 via off
 forwarded_for delete
@@ -150,6 +135,21 @@ request_header_access Cache-Control deny all
 
 # ----------------------------
 # 10) Debug Level (ถ้าต้องการ)
-#     1 = น้อย, 9 = ละเอียดยิบ
 # ----------------------------
 # debug_options ALL,1
+
+# ----------------------------
+# 11) Cache Manager (cachemgr.cgi)
+# ----------------------------
+cache_mgr root@localhost
+
+# 11.1 รหัสผ่านแบบต่าง ๆ
+cachemgr_passwd MySecretPass all      # รหัสผ่านเดียว for all เมนู
+cachemgr_passwd passinfo info         # Password เฉพาะเมนู 'info'
+cachemgr_passwd passinfo menu         # รวม 'menu' ด้วย
+cachemgr_passwd passshutdown shutdown # Password อีกชุดสำหรับ 'shutdown'
+cachemgr_passwd passall all           # Password ที่ครอบคลุมทุกเมนู
+
+# =========================================
+# END OF CONFIG
+# =========================================
